fixed align on 0 button

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -62,6 +62,8 @@ $container-border-color: rgba(35, 35, 35, .5);
     @include make-xs-column( 6 );
     $grid-columns: 10 !global;
     @include make-md-column( 2 );
+    text-align: left;
+    padding-left: 22px;
   }
 }
 
@@ -91,10 +93,9 @@ body {
   min-width: 234px;
   max-width: 234px;
   border-radius: 5px;
-  position: absolute;
+  position: relative;;
   top: 120px;
-  left: 50%;
-  margin-left: -117px;
+  margin: 0 auto;
 
   @media (min-width: $screen-md-min) {
     min-width: 576px;
@@ -217,11 +218,7 @@ body {
 .second-function {
   display: none;
 }
-.btn-zero {
-  border-radius: 0 0 0 3px;
-  text-align: left;
-  padding-left: 10%;
-}
+
 .btn-equal {
   border-radius: 0 0 3px 0;
 }
